--- a/nifi-adx-processors/pom.xml
+++ b/nifi-adx-processors/pom.xml
@@ -17,7 +17,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.fiege.saphir</groupId>
+        <groupId>org.sebkenter.nifi</groupId>
         <artifactId>adx-processor</artifactId>
         <version>1.0</version>
     </parent>
@@ -27,7 +27,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.fiege.saphir</groupId>
+            <groupId>org.sebkenter.nifi</groupId>
             <artifactId>nifi-adx</artifactId>
             <version>1.0</version>
         </dependency>
