--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <version>1.13.0</version>
     </parent>
 
-    <groupId>com.fiege.saphir</groupId>
+    <groupId>org.sebkenter.nifi</groupId>
     <artifactId>adx-processor</artifactId>
     <version>1.0</version>
     <packaging>pom</packaging>
