Redesigned logging and proved working with batches of JSON files.

--- a/nifi-adx-nar/pom.xml
+++ b/nifi-adx-nar/pom.xml
@@ -32,7 +32,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.fiege.saphir</groupId>
+            <groupId>org.sebkenter.nifi</groupId>
             <artifactId>nifi-adx-processors</artifactId>
             <version>1.0</version>
         </dependency>
